// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`airbase reduer createAPIGetMemberMapinfoResponseAction 1`] = `
Array [
  Object {
    "api_action_kind": 1,
    "api_area_id": 6,
    "api_distance": Object {
      "api_base": 5,
      "api_bonus": 0,
    },
    "api_name": "第2基地航空隊",
    "api_plane_info": Array [
      Object {
        "api_cond": 1,
        "api_count": 15,
        "api_max_count": 18,
        "api_slotid": 52792,
        "api_squadron_id": 1,
        "api_state": 1,
      },
      Object {
        "api_cond": 1,
        "api_count": 4,
        "api_max_count": 18,
        "api_slotid": 52364,
        "api_squadron_id": 2,
        "api_state": 1,
      },
      Object {
        "api_cond": 1,
        "api_count": 18,
        "api_max_count": 18,
        "api_slotid": 26059,
        "api_squadron_id": 3,
        "api_state": 1,
      },
      Object {
        "api_cond": 1,
        "api_count": 17,
        "api_max_count": 18,
        "api_slotid": 52691,
        "api_squadron_id": 4,
        "api_state": 1,
      },
    ],
    "api_rid": 1,
  },
  Object {
    "api_action_kind": 0,
    "api_area_id": 6,
    "api_distance": Object {
      "api_base": 0,
      "api_bonus": 0,
    },
    "api_name": "第二基地航空隊",
    "api_plane_info": Array [
      Object {
        "api_slotid": 0,
        "api_squadron_id": 1,
        "api_state": 0,
      },
      Object {
        "api_slotid": 0,
        "api_squadron_id": 2,
        "api_state": 0,
      },
      Object {
        "api_slotid": 0,
        "api_squadron_id": 3,
        "api_state": 0,
      },
      Object {
        "api_slotid": 0,
        "api_squadron_id": 4,
        "api_state": 0,
      },
    ],
    "api_rid": 2,
  },
  Object {
    "api_action_kind": 0,
    "api_area_id": 6,
    "api_distance": Object {
      "api_base": 0,
      "api_bonus": 0,
    },
    "api_name": "第三基地航空隊",
    "api_plane_info": Array [
      Object {
        "api_slotid": 0,
        "api_squadron_id": 1,
        "api_state": 0,
      },
      Object {
        "api_slotid": 0,
        "api_squadron_id": 2,
        "api_state": 0,
      },
      Object {
        "api_slotid": 0,
        "api_squadron_id": 3,
        "api_state": 0,
      },
      Object {
        "api_slotid": 0,
        "api_squadron_id": 4,
        "api_state": 0,
      },
    ],
    "api_rid": 3,
  },
  Object {
    "api_action_kind": 0,
    "api_area_id": 53,
    "api_distance": Object {
      "api_base": 0,
      "api_bonus": 0,
    },
    "api_name": "第一基地航空隊",
    "api_plane_info": Array [
      Object {
        "api_slotid": 0,
        "api_squadron_id": 1,
        "api_state": 0,
      },
      Object {
        "api_slotid": 0,
        "api_squadron_id": 2,
        "api_state": 0,
      },
      Object {
        "api_slotid": 0,
        "api_squadron_id": 3,
        "api_state": 0,
      },
      Object {
        "api_slotid": 0,
        "api_squadron_id": 4,
        "api_state": 0,
      },
    ],
    "api_rid": 1,
  },
]
`;

exports[`airbase reduer createAPIPortPortResponseAction 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`airbase reduer createAPIReqAirCorpsChangeNameResponseAction 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -4,11 +4,11 @@
      \\"api_area_id\\": 6,
      \\"api_distance\\": Object {
        \\"api_base\\": 5,
        \\"api_bonus\\": 0,
      },
-     \\"api_name\\": \\"第2基地航空隊\\",
+     \\"api_name\\": \\"第1基地航空隊\\",
      \\"api_plane_info\\": Array [
        Object {
          \\"api_cond\\": 1,
          \\"api_count\\": 15,
          \\"api_max_count\\": 18,"
`;

exports[`airbase reduer createAPIReqAirCorpsSetActionResponseAction 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  Array [
    Object {
-     \\"api_action_kind\\": 1,
+     \\"api_action_kind\\": 0,
      \\"api_area_id\\": 6,
      \\"api_distance\\": Object {
        \\"api_base\\": 5,
        \\"api_bonus\\": 0,
      },"
`;

exports[`airbase reduer createAPIReqAirCorpsSetPlaneResponseAction 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`airbase reduer createAPIReqAirCorpsSupplyResponseAction 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -26,11 +26,11 @@
        },
        Object {
          \\"api_cond\\": 1,
          \\"api_count\\": 18,
          \\"api_max_count\\": 18,
-         \\"api_slotid\\": 26059,
+         \\"api_slotid\\": 52792,
          \\"api_squadron_id\\": 3,
          \\"api_state\\": 1,
        },
        Object {
          \\"api_cond\\": 1,"
`;

exports[`airbase reduer createAPIReqMapNextResponseAction 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;
